# howl-lang

./: .gitignore  Makefile  README.md  SPEC.md  compiler.ts  generator.ts  grapher.ts  hello.hl  hrt0.c  http_server.hl  lexer.ts  lints_todo.md  notes.txt  package-lock.json  package.json  parser.ts  pom.xml  run_tests.sh  test.hl  test2.hl  test2.zz  test3.hl  test3.zz  test4.hl  test4.zz  test5.hl  test6.hl  test7.hl  test_input  test_input.hl  test_input.zz  tsconfig.json  type_notes.tex
assets/: pack.json  runtime.c  runtime.h
ast/: ASTElement.ts  ASTUtil.ts  AsmStatement.ts  BaseType.ts  Block.ts  Class.ts  ClassBody.ts  ClassElement.ts  ClassHeaderElement.ts  CompoundStatement.ts  CompoundStatementElement.ts  FQN.ts  Name.ts  (+38 more)
howl-rs/: .gitignore  Cargo.toml  build.rs  hello.hl  http_server.hl  runtime.c  runtime.h  test_parsed1.hl  test_rs.hl
howl-rs/src/: compilation_unit.rs  context.rs  cst_import.rs  howl.l  howl.y  logger.rs  main.rs  parser.rs
howl-rs/src/ast/: arena.rs  base_type_element.rs  class_element.rs  class_field_element.rs  expression_element.rs  function_declaration_element.rs  function_element.rs  interface_element.rs  mod.rs  placeholder_element.rs  pretty_print.rs  statement_element.rs  type_element.rs  types.rs
howl-rs/src/ast_old/: class_field_element.rs  expression_element.rs  function_element.rs  placeholder_element.rs  statement_element.rs
howl-rs/src/output/: csrc.rs  graphviz.rs  llvm.rs  mod.rs
howl-rs/src/transform/: assemble_statements.rs  mod.rs  qualify_items.rs  resolve_names.rs
howl-rs/stdlib/: exception.hl  vec.hl
(+562 files in other folders)
